--- a/website/app/[locale]/(root)/docs/markup-driven/content.mdx
+++ b/website/app/[locale]/(root)/docs/markup-driven/content.mdx
@@ -168,11 +168,10 @@ This not only improves productivity but also simplifies syntax markup in class a
 <button class="font:14 font:20**@md** opacity:.5**[disabled]**" disabled>Bravo!</button>
 ```
 
-(o) Build a visually consistent UI with [design tokens](/docs/configuration).
+(o) Build a visually consistent UI with [design tokens](/variables-and-modes).
 ```html
 <h1 class="font:lg fg:primary">Hello World</h1>
 ```
-
 
 ---
 
