--- a/website/app/[locale]/(root)/docs/spacing-and-sizing/content.mdx
+++ b/website/app/[locale]/(root)/docs/spacing-and-sizing/content.mdx
@@ -54,6 +54,11 @@ Apply the defined `spacing` variables using the inherited rules <Heirs />.
         </Code>
     </div>
 </details>
+(o) It's recommended to use `4x` instead of the custom token `md`.
+```html
+<div class="**mt:4x** **p:4x**">…</div>
+```
+
 (x) Do not use numerical values as tokens.
 ```js
 export default {
