--- a/website/app/[locale]/(root)/docs/variables-and-modes/content.mdx
+++ b/website/app/[locale]/(root)/docs/variables-and-modes/content.mdx
@@ -1,6 +1,8 @@
 ## Introduction [sr-only]
 One of the most significant ways of managing sources of truth is through design tokens. In Master CSS, you can implement your design tokens through [configuration](/docs/configuration).
 
+This is similar to [Figma's variables](https://help.figma.com/hc/en-us/articles/15145852043927-Create-and-manage-variables).
+
 ---
 
 ## Benefits
