--- a/website/app/[locale]/(root)/docs/installation/vite/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/content.mdx
@@ -21,7 +21,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             ```bash name=Terminal
             npx degit master-co/css/examples/vite-with-runtime-rendering __my-project__
             cd __my-project__
-            npm install @master/css@rc
+            npm install @master/css-runtime@rc
             npm install
             npm run dev
             ```
@@ -63,7 +63,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         </StepL>
         <StepR>
             ```install
-            **@master/css@rc**
+            **@master/css-runtime@rc**
             ```
         </StepR>
     </Step>
@@ -86,10 +86,10 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         <StepR>
             ```ts name=main.ts
             …
-            +   import { initRuntime } from '@master/css';
+            +   import { initCSSRuntime } from '@master/css-runtime';
             +   import config from 'master.css';
 
-            +   initRuntime(config)
+            +   initCSSRuntime(config)
             ```
         </StepR>
     </Step>
