--- a/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
@@ -21,7 +21,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             ```bash name=Terminal
             npx degit master-co/css/examples/webpack-with-static-extraction __my-project__
             cd __my-project__
-            npm install @master/css@rc
+            npm install @master/css-runtime@rc
             npm install
             npm run dev
             ```
