--- a/website/app/[locale]/(root)/docs/runtime/content.mdx
+++ b/website/app/[locale]/(root)/docs/runtime/content.mdx
@@ -106,7 +106,7 @@ All objects instantiated via `js new CSSRuntime()`.
 ---
 
 ## Functions
-### `initRuntime()`
+### `initCSSRuntime()`
 Initializes the Master CSS runtime rendering engine.
 <DocFn>
     {[
