--- a/website/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
@@ -14,10 +14,10 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="preload" as="style" href="https://esm.sh/@master/normal.css@rc?css">
             <link rel="stylesheet" href="https://esm.sh/@master/normal.css@rc?css">
-            <link rel="modulepreload" href="https://esm.sh/@master/css@rc">
+            <link rel="modulepreload" href="https://esm.sh/@master/css-runtime@rc">
             <script type="module">
-        +        import { initRuntime } from 'https://esm.sh/@master/css@rc'
-                initRuntime({
+        +        import { initCSSRuntime } from 'https://esm.sh/@master/css-runtime@rc'
+                initCSSRuntime({
                     variables: {
                         primary: '#000000'
                     }
