--- a/website/app/[locale]/(root)/docs/installation/laravel/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/content.mdx
@@ -21,7 +21,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             ```bash name=Terminal
             npx degit master-co/css/examples/laravel-with-runtime-rendering __my-project__
             cd __my-project__
-            npm install @master/css@rc
+            npm install @master/css-runtime@rc
             npm install
             ```
         </StepR>
@@ -74,7 +74,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         </StepL>
         <StepR>
             ```install
-            **@master/css@rc**
+            **@master/css-runtime@rc**
             ```
         </StepR>
     </Step>
@@ -97,10 +97,10 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         <StepR>
             ```js name=resources/js/app.js
             import './bootstrap'
-            + import { initRuntime } from '@master/css'
+            + import { initCSSRuntime } from '@master/css-runtime'
             + import config from 'master.css'
 
-            + initRuntime(config)
+            + initCSSRuntime(config)
             ```
         </StepR>
     </Step>
