Update animation-fill-mode syntax and components

--- a/website/app/[locale]/(root)/docs/animation-fill-mode/content.mdx
+++ b/website/app/[locale]/(root)/docs/animation-fill-mode/content.mdx
@@ -3,7 +3,7 @@
 
 Simplify the native syntax using the derived symbol.
 ```html
--<div class="animation-fill-mode:both">
+<div class="animation-fill-mode:both">
 +<div class="@fill:both">
 ```
 
