--- a/website/app/[locale]/(root)/docs/column-span/content.mdx
+++ b/website/app/[locale]/(root)/docs/column-span/content.mdx
@@ -5,28 +5,18 @@
 
 ## Basic usage
 ### Span across all columns
-Use `col-span:value` to make elements span across all columns.
-<Demo className="py:0!">
-    <div className="bg:white@light bg:gray-20@dark p:30">
-        <div className="gap:30 cols:3">
-            <div className="t:28 f:bold col-span:all mb:30">Introduction to animals</div>
-            <p className="m:0">There are many different types of animals in the world, and each has its own unique set of characteristics. No matter what type of animal you&#39;re interested in, you&#39;re sure to find something interesting and informative here. From spiders to whales, take a look at some of the most amazing creatures on earth!</p>
-        </div>
-    </div>
-</Demo>
-```html
-    <div class="cols:3">
+Use `col-span:all` to make elements span across all columns.
+<Basic className="col-span:all" />
 
-### Introduction to animals
-        <p>There are many different types of animals in the world …</p>
-    </div>
-```
+### Does not span multiple columns
+Use `col-span:none` to make elements not span across multiple columns.
+<Basic className="col-span:none" />
 
 ---
 
 ## Conditionally apply
 Apply styles based on different states using [selectors](/docs/state-selectors) and [conditional queries](/docs/conditional-queries).
 ```html
-<div class="column-span:all**:hover** column-span:all**@sm** column-span:all**@dark** column-span:all**@print**">…</div>
+<div class="col-span:all**:hover** col-span:all**@sm** col-span:all**@dark** col-span:all**@print**">…</div>
 ```
 
