Update cursor styles and add new component

--- a/website/app/[locale]/(root)/docs/cursor/content.mdx
+++ b/website/app/[locale]/(root)/docs/cursor/content.mdx
@@ -5,15 +5,10 @@
 
 ## Basic usage
 ### Set the cursor style
-Use the `cursor:value` to change the mouse cursor when hovering an element.
+Use the `cursor:pointer` to change the mouse cursor when hovering an element.
 
-(hover) Hovering the button to see the cursor style
-<Demo className="gap:40">
-    <button className="fg:white bg:indigo px:20 h:42 font:14 font:semibold r:5 cursor:pointer">submit</button>
-</Demo>
-```html
-<button class="**cursor:pointer**">submit</button>
-```
+(hover) Hovering the block to see the cursor style
+<Basic className="cursor:pointer" />
 
 ---
 
