Fix direction component and remove unfinished flag

--- a/website/app/[locale]/(root)/docs/direction/content.mdx
+++ b/website/app/[locale]/(root)/docs/direction/content.mdx
@@ -6,33 +6,11 @@
 ## Basic usage
 ### LTR
 Use `direction:ltr` to set the text direction to left-to-right.
-<Demo className="py:0!">
-    <div className="direction:ltr w:full bg:white@light bg:gray-20@dark p:30">
-        <div className="f:28 f:bold">Animals</div>
-        <p>There are a wide variety of animals in the world, and each one has its own unique set of characteristics and habits.</p>
-    </div>
-</Demo>
-```html
-<div class="direction:ltr">
-    <h3>Animals</h3>
-    <p>There are a wide variety of animals in the world …</p>
-</div>
-```
+<Basic className="direction:ltr" />
 
 ### RTL
 Use `direction:rtl` to set the text direction to right-to-left.
-<Demo className="py:0!">
-    <div className="direction:rtl w:full bg:white@light bg:gray-20@dark p:30">
-        <div className="f:28 f:bold">Animals</div>
-        <p>There are a wide variety of animals in the world, and each one has its own unique set of characteristics and habits.</p>
-    </div>
-</Demo>
-```html
-<div class="direction:ltr">
-    <h3>Animals</h3>
-    <p>There are a wide variety of animals in the world …</p>
-</div>
-```
+<Basic className="direction:rtl" />
 
 ---
 
