Update CSS syntaxes

--- a/website/app/[locale]/(root)/docs/background/content.mdx
+++ b/website/app/[locale]/(root)/docs/background/content.mdx
@@ -4,6 +4,6 @@
 ## Conditionally apply
 Apply styles based on different states using [selectors](/docs/state-selectors) and [conditional queries](/docs/conditional-queries).
 ```html
-<div class="bg:url(\'…\');center/cover**:hover** bg:url(\'…\');center/cover**@sm** bg:url(\'…\');center/cover**@dark** bg:url(\'…\');center/cover**@print**">…</div>
+<div class="bg:url(\'…\')|center/cover**:hover** bg:url(\'…\')|center/cover**@sm** bg:url(\'…\')|center/cover**@dark** bg:url(\'…\')|center/cover**@print**">…</div>
 ```
 
