Refactor import statements and replace "l" with "clsx"

--- a/website/app/[locale]/(root)/docs/position/content.mdx
+++ b/website/app/[locale]/(root)/docs/position/content.mdx
@@ -1,5 +1,5 @@
 import { users } from 'websites/data/users'
-import { l } from 'to-line'
+import clsx from 'clsx'
 
 ## Overview [sr-only]
 <Overview/>
@@ -100,7 +100,7 @@ Use `sticky`to position an element base on scroll position. It&#39;s like place 
     <div className="box block! p:8|20_li p:10|0! r:10 w:full max-w:340@sm max-h:250 overflow:auto">
         <ul className="list-style:none mt:10 pl:0 w:full">
             {users.map((user, index) =>
-                <li className={l(index === 1 ? 'sticky top:0 z:1' : '', 'bg:gray-30 bg:gray-28:hover bg:gray-32:active flex gap:12 cursor:pointer')} key={index}>
+                <li className={clsx(index === 1 ? 'sticky top:0 z:1' : '', 'bg:gray-30 bg:gray-28:hover bg:gray-32:active flex gap:12 cursor:pointer')} key={index}>
                     <div className="rel">
                         <Image src={user.url} width="40" height="40" className="round object:cover" alt="avatar" />
                         {index < 2 && <svg className="abs right:1 bottom:1 bg:green-70 outline:2|solid|white outline:gray-20@dark round w:7 h:7" />}
