--- a/website/app/[locale]/(root)/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/RuntimeRenderingIntro.mdx
@@ -1,11 +1,11 @@
 import { IconAdjustments, IconRecycle, IconWorldDownload } from '@tabler/icons-react'
 import ImageCallToPreview from 'websites/components/ImageCallToPreview'
 import Features, { Feature } from 'websites/components/Features'
-import { l } from 'to-line'
+import clsx from 'clsx'
 
 Master CSS [Runtime Rendering](/docs/rendering-modes/runtime-rendering) observes **changes in DOM class names** at browser runtime, generates corresponding CSS rules, and injects them into the **running style sheet**.
 <div className="flex flex:wrap@<sm gap:12x my:12x">
-    <Features className={l(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
+    <Features className={clsx(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
         <Feature>
             <IconWorldDownload className="app-icon-primary" />
             <div>
