--- a/website/app/[locale]/(root)/docs/rendering-modes/components/ProgressiveRenderingIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/ProgressiveRenderingIntro.mdx
@@ -1,11 +1,11 @@
 import { IconPackageImport, IconDevicesBolt, IconAdjustments } from '@tabler/icons-react'
 import ImageCallToPreview from 'websites/components/ImageCallToPreview'
 import Features, { Feature } from 'websites/components/Features'
-import { l } from 'to-line'
+import clsx from 'clsx'
 
 Master CSS [Progressive Rendering](/docs/rendering-modes/progressive-rendering) scans the rendered HTML ahead of time, **server-side** or **at build time**, generates the corresponding **CSS rules for each page**, and **lazy loads** the runtime engine to keep track of the dynamic class names.
 <div className="flex flex:wrap@<sm gap:12x mt:12x">
-    <Features className={l(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
+    <Features className={clsx(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
         <Feature>
             <IconDevicesBolt className="app-icon-primary" />
             <div>
