--- a/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/components/StaticExtractionIntro.mdx
@@ -1,11 +1,11 @@
 import { IconAdjustments, IconDatabaseExport, IconFileExport } from '@tabler/icons-react'
 import ImageCallToPreview from 'websites/components/ImageCallToPreview'
 import Features, { Feature } from 'websites/components/Features'
-import { l } from 'to-line'
+import clsx from 'clsx'
 
 Master CSS [Static Extraction](/docs/rendering-modes/static-extraction) integrates build tools to **scan** project source code, **extract** class names, **generate** CSS rules, and write them into a **virtual CSS module**.
 <div className="flex flex:wrap@<sm gap:12x mt:12x">
-    <Features className={l(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
+    <Features className={clsx(props.img ? 'w:35%@sm' : 'grid-cols:3@sm')}>
         <Feature>
             <IconFileExport className="app-icon-primary" />
             <div>
